--- a/ip-address-tracker-master/src/components/IpAddressTracker/IpAddressTracker.module.css
+++ b/ip-address-tracker-master/src/components/IpAddressTracker/IpAddressTracker.module.css
@@ -1,5 +1,6 @@
 .mainContent{
-    background-color: rgb(68, 68, 238);
+    background:url("../../assets/pattern-bg-desktop.png");
+    background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -15,15 +16,15 @@
 
 .details{
     position: absolute;
-    border:solid;
     width: 80%;
+    box-shadow: 0px 0px 1px black;
     border-radius: 12px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     text-align: center;
     background-color: white;
-    top:80%;
+    top:85%;
 
 }
 
@@ -42,3 +43,29 @@
     font-weight: bolder;
     font-size: 1.5rem;
 }
+
+.formInput{
+    display: flex;
+    width: 80%;
+    height: 60px;
+    max-width: 800px;
+}
+
+.formInput input[type="text"]{
+    flex-grow:2;
+    border-top-left-radius: 12px;
+    border-bottom-left-radius: 12px;
+    border: none;
+    outline: none;
+    padding-left: 1rem;
+}
+
+.formInput input[type="submit"]{
+    flex-basis: 80px;
+    border-top-right-radius: 12px;
+    border-bottom-right-radius: 12px;
+    border: none;
+    background-color: black;
+    color: white;
+}
+
